--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "backend": "nodemon server",
-    "frontend":"cd client && npm start",
-    "dev":"concurrently \"npm run frontend\" \" npm run backend\""
-
+    "frontend": "cd client && npm start",
+     "dev":"concurrently \"npm run frontend\" \"npm run backend\""
   },
   "keywords": [],
   "author": "",
@@ -18,6 +17,7 @@
     "mongoose": "^6.1.4"
   },
   "devDependencies": {
+    "concurrently": "^7.0.0",
     "dotenv": "^10.0.0",
     "nodemon": "^2.0.15"
   }
